--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-"tokio" = {version = "1", features = ["full"]}
-"actix" = "0.13.3"
-"actix-web" = "4.6.0"
-"actix-web-actors" = "4.3.0"
-"serde" =  "1.0.203"
-"serde_json" = "1.0.117"
+tokio = {version = "1", features = ["full"]}
+actix = "0.13.3"
+actix-web = "4.6.0"
+actix-web-actors = "4.3.0"
+serde =  {version = "1.0.203", features = ["derive"]}
+serde_json = "1.0.117"
+mpris-async = "0.1.0"
+async-std = "1.12.0"
