--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ actix-web = "4.6.0"
 actix-web-actors = "4.3.0"
 serde =  {version = "1.0.203", features = ["derive"]}
 serde_json = "1.0.117"
+mpris = "2.0.1"
 mpris-async = "0.1.0"
 async-std = "1.12.0"
