--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = {version = "1", features = ["full"]}
-actix = "0.13.3"
-actix-web = "4.6.0"
+tokio = {version = "1.38.0", features = ["full"]}
+actix = "0.13.5"
+actix-web = "4.8.0"
 actix-web-actors = "4.3.0"
 serde =  {version = "1.0.203", features = ["derive"]}
 serde_json = "1.0.117"
 mpris = "2.0.1"
 mpris-async = "0.1.0"
 async-std = "1.12.0"
+lazy_static = "1.4.0"
+url = "2.5.2"
+flac = "0.5.0"
+id3 = "1.13.1"
