--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,14 @@ actix = "0.13.5"
 actix-web = "4.8.0"
 actix-web-actors = "4.3.0"
 serde =  {version = "1.0.203", features = ["derive"]}
-serde_json = "1.0.117"
+serde_json = "1.0.118"
 mpris = "2.0.1"
 mpris-async = "0.1.0"
 async-std = "1.12.0"
-lazy_static = "1.4.0"
 url = "2.5.2"
 flac = "0.5.0"
 id3 = "1.13.1"
+# async-trait = "0.1.80"
+# ncm-api = { git = "https://github.com/gmg137/netease-cloud-music-api.git", branch = "dev", package = "netease-cloud-music-api" }
+ncm-api = { git = "https://github.com/gmg137/netease-cloud-music-api.git", tag = "1.4.0", package = "netease-cloud-music-api" }
+lazy_static = "1.5.0"
