[feat] add retry for netease search

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.9.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.39.3", features = ["full"] }
+tokio = { version = "1.40.0", features = ["full"] }
 actix = "0.13.5"
 actix-web = "4.9.0"
 actix-web-actors = "4.3.0"
-serde = { version = "1.0.209", features = ["derive"] }
-serde_json = "1.0.127"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
 mpris = "2.0.1"
 # mpris-async = "0.1.0"
 # async-std = "1.12.0"
@@ -18,7 +18,7 @@ url = "2.5.2"
 id3 = "1.14.0"
 # async-trait = "0.1.80"
 # ncm-api = { git = "https://github.com/gmg137/netease-cloud-music-api.git", branch = "dev", package = "netease-cloud-music-api" }
-ncm-api = { git = "https://github.com/gmg137/netease-cloud-music-api.git", tag = "1.4.0", package = "netease-cloud-music-api" }
+ncm-api = { git = "https://github.com/chiyuki0325/netease-cloud-music-api.git", tag = "1.4.0-fix1", package = "netease-cloud-music-api" }
 lazy_static = "1.5.0"
 metaflac = "0.2.7"
 isahc = { version = "1.7.2", features = ["json"] }
